[gd_scene load_steps=17 format=2]

[ext_resource path="res://files/scripts/statspanel.gd" type="Script" id=1]
[ext_resource path="res://files/buttons/mainscreen/45.png" type="Texture" id=2]
[ext_resource path="res://files/buttons/levelup.png" type="Texture" id=3]
[ext_resource path="res://files/buttons/levelupdown.png" type="Texture" id=4]
[ext_resource path="res://files/buttons/mainscreen/46.png" type="Texture" id=5]
[ext_resource path="res://files/buttons/mainscreen/47.png" type="Texture" id=6]
[ext_resource path="res://files/buttons/mainscreen/48.png" type="Texture" id=7]
[ext_resource path="res://files/buttons/mainscreen/49.png" type="Texture" id=8]
[ext_resource path="res://files/buttons/mainscreen/50.png" type="Texture" id=9]
[ext_resource path="res://files/buttons/mainscreen/51.png" type="Texture" id=10]
[ext_resource path="res://files/buttons/mainscreen/52.png" type="Texture" id=11]
[ext_resource path="res://files/buttons/icons/xpbot.png" type="Texture" id=12]
[ext_resource path="res://files/buttons/icons/xpup.png" type="Texture" id=13]
[ext_resource path="res://files/buttons/icons/xpmid.png" type="Texture" id=14]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 26, 25 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 26, 25 )

[node name="statspanel" type="Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1217.0
margin_top = 1.0
margin_right = -677.0
margin_bottom = -162.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -460.0
margin_top = 27.0
margin_right = -373.0
margin_bottom = 43.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Physical Stats"
align = 1

[node name="sstr" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -463.0
margin_top = 53.0
margin_right = -438.0
margin_bottom = 78.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true

[node name="Label" type="RichTextLabel" parent="sstr"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="sstr"]
margin_right = 77.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="sstr"]
margin_left = 54.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )

[node name="sagi" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -463.0
margin_top = 82.0
margin_right = -438.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
expand = true

[node name="Label" type="RichTextLabel" parent="sagi"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="sagi"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="sagi"]
margin_left = 54.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )

[node name="smaf" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -463.0
margin_top = 111.0
margin_right = -438.0
margin_bottom = 136.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 6 )
expand = true

[node name="Label" type="RichTextLabel" parent="smaf"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="smaf"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="smaf"]
margin_left = 54.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )

[node name="send" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -463.0
margin_top = 140.0
margin_right = -438.0
margin_bottom = 165.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 7 )
expand = true

[node name="Label" type="RichTextLabel" parent="send"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="send"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="send"]
margin_left = 54.0
margin_top = 2.0
margin_right = 74.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )

[node name="Label1" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -230.0
margin_top = 27.0
margin_right = -151.0
margin_bottom = 43.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Mental Stats"
align = 1

[node name="cour" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.0
margin_top = 53.0
margin_right = -218.0
margin_bottom = 78.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
expand = true

[node name="Label" type="RichTextLabel" parent="cour"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="cour"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="conf" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.0
margin_top = 82.0
margin_right = -218.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 9 )
expand = true

[node name="Label" type="RichTextLabel" parent="conf"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="conf"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="wit" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.0
margin_top = 111.0
margin_right = -218.0
margin_bottom = 136.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 10 )
expand = true

[node name="Label" type="RichTextLabel" parent="wit"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="wit"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="charm" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.0
margin_top = 140.0
margin_right = -218.0
margin_bottom = 165.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 11 )
expand = true

[node name="Label" type="RichTextLabel" parent="charm"]
margin_left = 29.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "100/100"
text = "100/100"

[node name="Control" type="Control" parent="charm"]
margin_right = 65.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="leveltext" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 171.0
margin_right = 370.0
margin_bottom = 278.0
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true

[node name="levelreqs" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 312.0
margin_right = 370.0
margin_bottom = 419.0
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true

[node name="traittext" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 23.0
margin_top = 163.0
margin_right = 24.0
margin_bottom = 270.0
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true

[node name="levelprogress" type="TextureProgress" parent="."]
margin_left = 4.0
margin_top = 279.0
margin_right = 210.0
margin_bottom = 304.0
size_flags_horizontal = 2
size_flags_vertical = 2
value = 45.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 14 )

[node name="Label" type="Label" parent="levelprogress"]
margin_left = 59.0
margin_top = -15.0
margin_right = 150.0
margin_bottom = -1.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Experience"
align = 1

[connection signal="meta_hover_ended" from="traittext" to="." method="_on_traittext_meta_hover_ended"]
[connection signal="meta_hover_started" from="traittext" to="." method="_on_traittext_meta_hover_started"]
[connection signal="mouse_exited" from="traittext" to="." method="_on_traittext_mouse_exited"]
